<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="#FAF0E6" android:weightSum="6">

	<TextView android:layout_height="wrap_content" android:textStyle="bold" android:id="@+id/title2" android:text="@string/title2" android:layout_weight="2" android:layout_width="fill_parent" android:textSize="20dip" android:textColor="#708090" android:gravity="center"></TextView>
	<LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center" android:layout_weight="1"><Button android:layout_height="wrap_content" android:layout_gravity="center" android:text="@string/button2" android:layout_marginRight="10dp" android:layout_width="140dp" android:id="@+id/goDialog2"></Button><Button android:layout_height="wrap_content" android:layout_gravity="center" android:text="@string/button3" android:layout_marginLeft="10dp" android:layout_width="140dp" android:id="@+id/goDialog3"></Button></LinearLayout>
	

	<TextView android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:textSize="20dip" android:gravity="center"
		android:text="@string/nonInput" android:id="@+id/input2" android:layout_weight="1"></TextView>
	<TextView android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:textStyle="bold" android:textColor="#FF0000" android:gravity="center"
		android:id="@+id/result2" android:layout_weight="2" android:textSize="30dip"></TextView>

</LinearLayout>